--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   <a href="javascript:void(0)" onclick="this.parentElement.style='display:none;';" class="w3-bar-item w3-button w3-display-topright w3-text-teal">Close<i class="fa fa-remove"></i></a>
   <a onclick="CLSrjk(0);OPN_P(0);" class="w3-bar-item w3-button">Nanly 32</a>
   <a onclick="CLSrjk(1);OPN_P(1);" class="w3-bar-item w3-button">Myall</a>
-  <a onclick="CLSrjk(2);OPN_P(2);" class="w3-bar-item w3-button" style="display:none;">Qube 3D</a>
-  <a onclick="CLSrjk(3);OPN_P(3);" class="w3-bar-item w3-button" style="display:none;">Myall</a>
-  <a onclick="CLSrjk(4);OPN_P(4);" class="w3-bar-item w3-button" style="display:none;"  >empty</a>
+  <a onclick="CLSrjk(2);OPN_P(2);" class="w3-bar-item w3-button" style="display:none;"></a>
+  <a onclick="CLSrjk(3);OPN_P(3);" class="w3-bar-item w3-button" style="display:none;"></a>
+  <a onclick="CLSrjk(4);OPN_P(4);" class="w3-bar-item w3-button" style="display:none;"></a>
 </nav>
 
 <!-- Navbar  w3-teal bese staroto -->
@@ -365,7 +365,7 @@ I have some good ideas that i develop for world wide usage that i think can help
       <div class="w3-section"><label class="w3-input" type="text">easy profil meanage</label></div>
       <div class="w3-section"><label class="w3-input" type="text">multi cros platform view-abele</label></div>
       <div class="w3-section"><label class="w3-input" type="text">anonmy provacy with email and acc verificatio</label></div>
-      <div class="w3-section"><label class="w3-input" type="text">more info about verification can find <span target="_blank" onclick="window.open('https://myall.sytes.net/agriment/')">here.</span></label></div></form></div></div></div></div></div>
+      <div class="w3-section"><label class="w3-input" type="text">more info about verification can find <span target="_blank" onclick="window.open('https://myall.sytes.net/agriment/')"  style="cursor: pointer;color: blue;">here.</span></label></div></form></div></div></div></div></div>
  <footer class="w3-container w3-teal w3-center"><p>relised <span >7 Oct 2020</span> by <span>1kinger</span></p></footer></div></div>
  <!--myall edn-->
 
