--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ I have some good ideas that i develop for world wide usage that i think can help
   </div></div></div>
   
 <div class="w3-quarter">
-<div class="w3-card w3-white "><img src="https://www.w3schools.com/w3images/mountains.jpg"  style="width:100%">
+<div class="w3-card w3-white "><img src="kinger_Files/IMG/Myall/MyallWallpaper.png" style="width:100%">
   <div class="w3-container"><h3>Myall</h3>
   <h4>Virtuel personal link Organizer</h4>
   <p>All your Links under 1 link</p>
@@ -306,7 +306,7 @@ I have some good ideas that i develop for world wide usage that i think can help
 <!-- Icon Bar (Sidebar - hidden on small screens)//////////////////////////nanly32 -->
 <nav class="w3-sidebar w3-bar-block w3-center" style="font-size:55%;position:fixed;left:0px;top:0px;width:18%;z-index:555;overflow:hidden;">
   <!-- Avatar image in top left corner -->
-  <img style="width:70%" src="kinger_Files/IMG/Nanly32/g192.png">
+  <img style="width:70%" src="kinger_Files/IMG/Myall/MYALLogo.png">
   <a class="w3-bar-item w3-button w3-padding-large " href="#H_1">
     <i class="fa fa-home w3-xlarge" aria-hidden="true"></i><p>HOME</p></a>
   <a class="w3-bar-item w3-button w3-padding-large w3-hover-black" href="#A_1">
@@ -318,7 +318,7 @@ I have some good ideas that i develop for world wide usage that i think can help
 </nav>
 <!-- Image Header -->
 <div class="w3-display-container w3-animate-opacity" id="H_1">
-  <img style="width:100%;max-height:600px;" src="kinger_Files/IMG/Nanly32/N%202500x1665.jpg">
+  <img style="width:100%;max-height:600px;" src="kinger_Files/IMG/Myall/MyallWallpaper.png">
 </div>
 
 <!-- Work Row -->
@@ -330,7 +330,7 @@ I have some good ideas that i develop for world wide usage that i think can help
 </p></div>
 
 <div class="w3-quarter"><div class="w3-card w3-white">
-<iframe class="FRvideo" allowfullscreen="" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" src="https://www.youtube.com/embed/IoVDOWMxsIM" style="display: block;" frameborder="0"></iframe>
+<img style="width:100%;max-height:600px;" src="kinger_Files/IMG/Myall/p2.png">
 
   <div class="w3-container"><h4></h4>
   <h3>Menage your account</h3>
@@ -338,15 +338,15 @@ I have some good ideas that i develop for world wide usage that i think can help
 
 
 <div class="w3-quarter"><div class="w3-card w3-white">
-<iframe class="FRvideo" allowfullscreen="" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" src="https://www.youtube.com/embed/IK2QFfiSclc" style="display: block;" frameborder="0"></iframe>
+<img style="width:100%;max-height:600px;" src="kinger_Files/IMG/Myall/p3.png">
 
   <div class="w3-container"><h4></h4>
   <h3>cros platform</h3>
   <p>desing to work on every online conection divece </p></div></div></div>
   
 <div class="w3-quarter"><div class="w3-card w3-white">
-<iframe class="FRvideo" allowfullscreen="" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" src="https://www.youtube.com/embed/ocK-64jsfHM" style="display: block;" frameborder="0"></iframe>
-
+<img style="width:100%;max-height:600px;" src="kinger_Files/IMG/Myall/p1.png">
+  
   <div class="w3-container"><h4></h4>
   <h3>Verification intigreted</h3>
   <p>there are email and acc verification for maximun security and tristung easuse</p></div></div></div>
@@ -365,7 +365,7 @@ I have some good ideas that i develop for world wide usage that i think can help
       <div class="w3-section"><label class="w3-input" type="text">easy profil meanage</label></div>
       <div class="w3-section"><label class="w3-input" type="text">multi cros platform view-abele</label></div>
       <div class="w3-section"><label class="w3-input" type="text">anonmy provacy with email and acc verificatio</label></div>
-      <div class="w3-section"><label class="w3-input" type="text">more info about verification can find <span target="_blank" onclick="window.open('https://myall.sytes.net/agriment/')"  style="cursor: pointer;color: blue;">here.</span></label></div></form></div></div></div></div></div>
+      <div class="w3-section"><label class="w3-input" type="text">more info about verification can find <span target="_blank" onclick="window.open('https://myall.sytes.net/Verification/')"  style="cursor: pointer;color: blue;">here.</span></label></div></form></div></div></div></div></div>
  <footer class="w3-container w3-teal w3-center"><p>relised <span >7 Oct 2020</span> by <span>1kinger</span></p></footer></div></div>
  <!--myall edn-->
 
