--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <a href="javascript:void(0)" onclick="this.parentElement.style='display:none;';" class="w3-bar-item w3-button w3-display-topright w3-text-teal">Close<i class="fa fa-remove"></i></a>
   <a onclick="CLSrjk(0);OPN_P(0);" class="w3-bar-item w3-button">Nanly 32</a>
   <a onclick="CLSrjk(1);OPN_P(1);" class="w3-bar-item w3-button">Myall</a>
-  <a onclick="CLSrjk(2);OPN_P(2);" class="w3-bar-item w3-button" style="display:none;"></a>
+  <a onclick="CLSrjk(2);OPN_P(2);" class="w3-bar-item w3-button">BitSpeak</a>
   <a onclick="CLSrjk(3);OPN_P(3);" class="w3-bar-item w3-button" style="display:none;"></a>
   <a onclick="CLSrjk(4);OPN_P(4);" class="w3-bar-item w3-button" style="display:none;"></a>
 </nav>
@@ -368,7 +368,80 @@ I have some good ideas that i develop for world wide usage that i think can help
       <div class="w3-section"><label class="w3-input" type="text">more info about verification can find <span target="_blank" onclick="window.open('https://myall.sytes.net/Verification/')"  style="cursor: pointer;color: blue;">here.</span></label></div></form></div></div></div></div></div>
  <footer class="w3-container w3-teal w3-center"><p>relised <span >7 Oct 2020</span> by <span>1kinger</span></p></footer></div></div>
  <!--myall edn-->
+ 
+ 
+<div class="w0-modal" id="BitSpeak"><!--BitSpeak start-->
+  <div class="w0-modal-content w3-card-4 w3-animate-top" style="top:0px;left:19%;">
+    <header class="w3-container w3-teal w3-display-container"> 
+      <span class="w3-button w3-teal w3-display-topright" onclick="CLSrjk(1);"><i class="fa fa-remove" aria-hidden="true"></i></span>
+      <h4 class="*proekt_name">BitSpeak</h4></header>
+ <div class="w3-container" style="padding: 0px;"><div id="myPage_2345">
+
+<!-- Icon Bar (Sidebar - hidden on small screens)//////////////////////////nanly32 -->
+<nav class="w3-sidebar w3-bar-block w3-center" style="font-size:55%;position:fixed;left:0px;top:0px;width:18%;z-index:555;overflow:hidden;">
+  <!-- Avatar image in top left corner -->
+  <img style="width:70%" src="kinger_Files/IMG/Myall/MYALLogo.png">
+  <a class="w3-bar-item w3-button w3-padding-large " href="#H_2">
+    <i class="fa fa-home w3-xlarge" aria-hidden="true"></i><p>HOME</p></a>
+  <a class="w3-bar-item w3-button w3-padding-large w3-hover-black" href="#A_2">
+    <i class="fa fa-user w3-xlarge" aria-hidden="true"></i><p>ABOUT</p></a>
+  <a class="w3-bar-item w3-button w3-padding-large w3-hover-black" href="#P_2">
+    <i class="fa fa-eye w3-xlarge" aria-hidden="true"></i><p>PHOTOS</p></a>
+  <a class="w3-bar-item w3-button w3-padding-large w3-hover-black" onclick="CLSrjk(1);">
+    <i class="fa fa-close w3-xlarge" aria-hidden="true"></i></a>
+</nav>
+<!-- Image Header -->
+<div class="w3-display-container w3-animate-opacity" id="H_2">
+  <img style="width:100%;max-height:600px;" src="kinger_Files/IMG/Myall/MyallWallpaper.png">
+</div>
+
+<!-- Work Row -->
+<div class="w3-row-padding w3-padding-64 w3-theme-l1" id="A_2">
+
+<div class="w3-quarter">
+<h2 class="*proekt_name">BitSpeak</h2>
+<p>BitSpeak is simple and easy text criptgrafing web program. It simple encode and decode your mesage with 1 mesage key word. BitSpeak is 100% safe  i uste ekstra tekst edishen
+</p></div>
+
+<div class="w3-quarter"><div class="w3-card w3-white">
+<img style="width:100%;max-height:600px;" src="kinger_Files/IMG/Myall/p2.png">
+
+  <div class="w3-container"><h4></h4>
+  <h3>Super simple and easy to use</h3>
+  <p>Encode and decode your message super fast IN REAL TIME</p></div></div></div>
 
 
+<div class="w3-quarter"><div class="w3-card w3-white">
+<img style="width:100%;max-height:600px;" src="kinger_Files/IMG/Myall/p3.png">
+
+  <div class="w3-container"><h4></h4>
+  <h3>Trusted opensorce porject</h3>
+  <p>BitSpeak is based on <span title="https://cryptii.com/" onclick="https://cryptii.com/">https://cryptii.com/</span> project but with more frendly usage desing modification, and slim reduced code</p></div></div></div>
+  
+<div class="w3-quarter"><div class="w3-card w3-white">
+<img style="width:100%;max-height:600px;" src="kinger_Files/IMG/Myall/p1.png">
+  
+  <div class="w3-container"><h4></h4>
+  <h3>100% safe</h3>
+  <p>The encription/decription is done on your (client) device without send and recive any data .. You can use it even without internet after load the website </p></div></div></div>
+
+</div>
+
+<!-- Contact Container -->
+<div class="w3-container w3-padding-64 w3-theme-l5" id="P_2">
+<div class="w3-row"><div class="w3-col m5"><div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Oficial website:</span></div>
+      <h3 target="_blank" onclick="window.open('https://myall.sytes.net/')" title="https://myall.sytes.net/" style="cursor: pointer;color: blue;">https://myall.sytes.net/</h3>
+	                                                 </div>
+	  <div class="w3-col m7" id="workP1">	
+	<p class="w3-center ">key detals:</p>
+      <form class="w3-container w3-card-4 w3-padding-16 w3-white"> <!--  w3-input ke se zeme za clasificirano-->
+      <div class="w3-section"><label class="w3-input" type="text">up to 12 memory data section *(for now)</label></div>
+      <div class="w3-section"><label class="w3-input" type="text">easy profil meanage</label></div>
+      <div class="w3-section"><label class="w3-input" type="text">multi cros platform view-abele</label></div>
+      <div class="w3-section"><label class="w3-input" type="text">anonmy provacy with email and acc verificatio</label></div>
+      <div class="w3-section"><label class="w3-input" type="text">more info about verification can find <span target="_blank" onclick="window.open('https://myall.sytes.net/Verification/')"  style="cursor: pointer;color: blue;">here.</span></label></div></form></div></div></div></div></div>
+ <footer class="w3-container w3-teal w3-center"><p>relised <span >20 Oct 2020</span> by <span>1kinger</span></p></footer></div></div>
+ <!--BitSpeak edn-->
+ 
 
 <script src='kinger_Files/JS/my.js' type="text/javascript"></script></body></html>
