--- a/index.html
+++ b/index.html
@@ -200,14 +200,14 @@ I have some good ideas that i develop for world wide usage that i think can help
   </div></div></div>
   
   
-<div class="w3-quarter"  style="opacity:0.05;">
-<div class="w3-card w3-white "><img src="kinger_Files/IMG/Nanly32/GGfotka%20nanlito%20sjt.jpg"  style="width:100%">
-  <div class="w3-container"><h3>Qube3D</h3>
-  <h4>android app/(game)</h4>
-  <p>virtuel 3 d qube</p>
-  <p>save your game progres</p>
-  <p>difrents dificals mode</p>
-  <p>easy screen adjystment</p>
+<div class="w3-quarter">
+<div class="w3-card w3-white "><img src="kinger_Files/IMG/BitSpeak/BitSpeak1500x1000.png"  style="width:100%">
+  <div class="w3-container"><h3>BitSpeak</h3>
+  <h4>Criptografig app</h4>
+  <p>Encode and decode instant</p>
+  <p>Trusted OpenSorce project</p>
+  <p>Suport only Latin font alphabet</p>
+  <p>easy use for everydey</p>
   <p><button class="w3-button w3-block w3-green w3-round" onclick="OPN_P(2);">see this projet </i></button></p>
   </div></div></div>
 
@@ -373,26 +373,26 @@ I have some good ideas that i develop for world wide usage that i think can help
 <div class="w0-modal" id="BitSpeak"><!--BitSpeak start-->
   <div class="w0-modal-content w3-card-4 w3-animate-top" style="top:0px;left:19%;">
     <header class="w3-container w3-teal w3-display-container"> 
-      <span class="w3-button w3-teal w3-display-topright" onclick="CLSrjk(1);"><i class="fa fa-remove" aria-hidden="true"></i></span>
+      <span class="w3-button w3-teal w3-display-topright" onclick="CLSrjk(2);"><i class="fa fa-remove" aria-hidden="true"></i></span>
       <h4 class="*proekt_name">BitSpeak</h4></header>
  <div class="w3-container" style="padding: 0px;"><div id="myPage_2345">
 
 <!-- Icon Bar (Sidebar - hidden on small screens)//////////////////////////nanly32 -->
 <nav class="w3-sidebar w3-bar-block w3-center" style="font-size:55%;position:fixed;left:0px;top:0px;width:18%;z-index:555;overflow:hidden;">
   <!-- Avatar image in top left corner -->
-  <img style="width:70%" src="kinger_Files/IMG/Myall/MYALLogo.png">
+  <img style="width:70%;" src="kinger_Files/IMG/BitSpeak/BitSpeakLOGO1000.png">
   <a class="w3-bar-item w3-button w3-padding-large " href="#H_2">
     <i class="fa fa-home w3-xlarge" aria-hidden="true"></i><p>HOME</p></a>
   <a class="w3-bar-item w3-button w3-padding-large w3-hover-black" href="#A_2">
     <i class="fa fa-user w3-xlarge" aria-hidden="true"></i><p>ABOUT</p></a>
   <a class="w3-bar-item w3-button w3-padding-large w3-hover-black" href="#P_2">
     <i class="fa fa-eye w3-xlarge" aria-hidden="true"></i><p>PHOTOS</p></a>
-  <a class="w3-bar-item w3-button w3-padding-large w3-hover-black" onclick="CLSrjk(1);">
+  <a class="w3-bar-item w3-button w3-padding-large w3-hover-black" onclick="CLSrjk(2);">
     <i class="fa fa-close w3-xlarge" aria-hidden="true"></i></a>
 </nav>
 <!-- Image Header -->
 <div class="w3-display-container w3-animate-opacity" id="H_2">
-  <img style="width:100%;max-height:600px;" src="kinger_Files/IMG/Myall/MyallWallpaper.png">
+  <img style="width:100%;max-height:600px;" src="kinger_Files/IMG/BitSpeak/BitSpeak1500x1000.png">
 </div>
 
 <!-- Work Row -->
@@ -416,7 +416,7 @@ I have some good ideas that i develop for world wide usage that i think can help
 
   <div class="w3-container"><h4></h4>
   <h3>Trusted opensorce porject</h3>
-  <p>BitSpeak is based on <span title="https://cryptii.com/" onclick="https://cryptii.com/">https://cryptii.com/</span> project but with more frendly usage desing modification, and slim reduced code</p></div></div></div>
+  <p>BitSpeak is based on <span onclick="window.open('https://cryptii.com/');" style="color: blue;cursor:pointer;">https://cryptii.com/</span> project but with more frendly usage desing modification, and slim reduced code</p></div></div></div>
   
 <div class="w3-quarter"><div class="w3-card w3-white">
 <img style="width:100%;max-height:600px;" src="kinger_Files/IMG/Myall/p1.png">
@@ -430,7 +430,7 @@ I have some good ideas that i develop for world wide usage that i think can help
 <!-- Contact Container -->
 <div class="w3-container w3-padding-64 w3-theme-l5" id="P_2">
 <div class="w3-row"><div class="w3-col m5"><div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Oficial website:</span></div>
-      <h3 target="_blank" onclick="window.open('https://myall.sytes.net/')" title="https://myall.sytes.net/" style="cursor: pointer;color: blue;">https://myall.sytes.net/</h3>
+      <h3 target="_blank" onclick="window.open('https://bitspeak.sytes.net/')" title="https://bitspeak.sytes.net/" style="cursor: pointer;color: blue;">https://bitspeak.sytes.net/</h3>
 	                                                 </div>
 	  <div class="w3-col m7" id="workP1">	
 	<p class="w3-center ">key detals:</p>
