--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ I have some good ideas that i develop for world wide usage that i think can help
 
 <div class="w3-quarter">
 <h2 class="*proekt_name">BitSpeak</h2>
-<p>BitSpeak is simple and easy text criptgrafing web program. It simple encode and decode your mesage with 1 mesage key word. BitSpeak is 100% safe  i uste ekstra tekst edishen
+<p>BitSpeak is simple and easy text criptgrafing web program. It simple encode and decode your mesage with 1 mesage key word. BitSpeak is light version 
 </p></div>
 
 <div class="w3-quarter"><div class="w3-card w3-white">
