--- a/index.html
+++ b/index.html
@@ -435,11 +435,9 @@ I have some good ideas that i develop for world wide usage that i think can help
 	  <div class="w3-col m7" id="workP1">	
 	<p class="w3-center ">key detals:</p>
       <form class="w3-container w3-card-4 w3-padding-16 w3-white"> <!--  w3-input ke se zeme za clasificirano-->
-      <div class="w3-section"><label class="w3-input" type="text">up to 12 memory data section *(for now)</label></div>
-      <div class="w3-section"><label class="w3-input" type="text">easy profil meanage</label></div>
-      <div class="w3-section"><label class="w3-input" type="text">multi cros platform view-abele</label></div>
-      <div class="w3-section"><label class="w3-input" type="text">anonmy provacy with email and acc verificatio</label></div>
-      <div class="w3-section"><label class="w3-input" type="text">more info about verification can find <span target="_blank" onclick="window.open('https://myall.sytes.net/Verification/')"  style="cursor: pointer;color: blue;">here.</span></label></div></form></div></div></div></div></div>
+      <div class="w3-section"><label class="w3-input" type="text">super easy text encode and decode</label></div>
+      <div class="w3-section"><label class="w3-input" type="text">only latin font alphabet</label></div>
+      <div class="w3-section"><label class="w3-input" type="text">use Variant Beaufort Cipher with repeat keyMode</label></div>
  <footer class="w3-container w3-teal w3-center"><p>relised <span >20 Oct 2020</span> by <span>1kinger</span></p></footer></div></div>
  <!--BitSpeak edn-->
  
