--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ I have some good ideas that i develop for world wide usage that i think can help
 <div class="w3-container w3-padding-64 w3-theme-l5" id="P_0">
 <div class="w3-row"><div class="w3-col m5"><div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Download</span></div>
       <h3 id="*proekt_dwlTXT" ></h3>
-	  <img id="*proekt_dwldIMG" style="cursor:pointer;width:70%;min-height:150px;max-height:550px;"></div>
+	  <img id="*proekt_dwldIMG" onclick="window.open('https://play.google.com/store/apps/details?id=com.qexample.Nanly32');" style="cursor:pointer;width:70%;min-height:150px;max-height:550px;"></div>
     <div class="w3-col m7" id="workP1">	
 	<p class="w3-center ">TECHNICAL SPECIFICATIONS :</p>
       <form class="w3-container w3-card-4 w3-padding-16 w3-white"> <!--  w3-input ke se zeme za clasificirano-->
