--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js" type="text/javascript"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<!--
+ 
+-->
+
 <script src='https://kit.fontawesome.com/a076d05399.js' type="text/javascript"></script>
 
 </head><body id="myPage" style="background-color:rgb(116,122,135)"><!-- Modal -->
@@ -442,4 +444,9 @@ I have some good ideas that i develop for world wide usage that i think can help
  <!--BitSpeak edn-->
  
 
-<script src='kinger_Files/JS/my.js' type="text/javascript"></script></body></html>
+<script src='kinger_Files/JS/my.js' type="text/javascript"></script>
+
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js" type="text/javascript"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+</body></html>
