--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vuex/3.1.2/vuex.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js" type="text/javascript"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+
 
 <link rel="stylesheet" href="index_files/SYT/CSS/w3.css">
 <link rel="stylesheet" href="index_files/SYT/CSS/my.css">
@@ -35,7 +38,7 @@
   <side_meni/>
 </div><script src="index_files/CMP/SIDE_MENI/j.js" type="text/javascript"></script>
 
-<div id="TopMeni"><link href="index_files/CMP/TOP_MENI/c.css" rel="stylesheet">
+<div id="TopMeni" class="w3-top"><link href="index_files/CMP/TOP_MENI/c.css" rel="stylesheet">
   <top_meni/>
 </div><script src="index_files/CMP/TOP_MENI/j.js" type="text/javascript"></script>
 
@@ -147,5 +150,4 @@
   <ftr/>
 </div><script src="index_files/CMP/Futero/j.js" type="text/javascript"></script>
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 <script type="text/javascript" src='kinger_Files/JS/my.js'></script></body></html>
